Fixing links and references
- Fixing image reference in devcontainer config file: it's now on
dockerhub
- Fixing case of plugin path in plugin config file: github
doesn't change the cloned location to lowercase like Stash does
- Fixing other typos

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "image": "vurtigo-sdk:latest",
+    "image": "labonny/vurtigo-sdk:latest",
     "forwardPorts": [1777],
     "runArgs":[
         "--cap-add=SYS_PTRACE",
